<resources>
    <string name="app_name">Trackable Habit</string>
    <string name="habits">Habits</string>
    <string name="manual">Manual</string>
    <string name="add">+</string>
    <string name="stats">Stats</string>
    <string name="user_manual">User Manual</string>
    <string name="back">back</string>
    <string name="create">Create</string>
    <string name="statistics">Statistics</string>
    <string name="button">Button</string>
    <string name="name_of_habit">Name of Habit</string>
    <string name="water_workout_etc">Water, Workout, etc.</string>
    <string name="reset_to_zero_every">Reset to Zero Every</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="never">Never</string>
    <string name="increment_by">Increment By</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="value_one">1</string>
    <string name="target">Target</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="frequency">Frequency</string>
    <string name="date">Date</string>
    <string name="add_date">Add date</string>
    <string name="time">Time</string>
    <string name="add_time">Add time</string>
    <string name="reminder_note">Reminder Note</string>
    <string name="add_a_note">Add a note</string>
    <string name="new_habit">New Habit</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="habit">Habit</string>
    <string name="_0">0</string>
    <string name="edit">Edit</string>
    <string name="add_habit">Add Habit</string>
    <string name="space">\ \</string>
    <string name="details">Details</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="todo">TODO</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>

    <string name="default_notification_channel_id">default</string>
    <string name="every">\Every \</string>
    <string name="bracket_seconds">(s)</string>
    <string name="rewards">Rewards</string>
    <string name="streak">Streak:</string>
    <string name="star1">star1</string>
    <string name="_1_day">1 Day</string>
    <string name="_3_days">3 Days</string>
    <string name="_1_week">1 Week</string>
    <string name="_2_weeks">2 Weeks</string>
    <string name="_1_month">1 Month</string>
    <string name="star2">star2</string>
    <string name="star3">star3</string>
    <string name="star4">star4</string>
    <string name="star5">star5</string>
    <string name="habitsCaps">HABITS</string>
    <string name="rewardsDescription">Collect rewards for your achievements.</string>
    <string name="statsDescription">View your progress on all your habits.</string>
    <string name="slash">/</string>
    <string name="message_for_motivation">Message for motivation.</string>
    <string name="username">\ Username</string>
    <string name="password">\ Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not registered?</string>
    <string name="trackable_habit">Trackable Habit</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">\ Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="news">News</string>
    <string name="newsDescription">Share your progress with your family and friends.</string>
    <string name="habitDescription">Meet your goals, track anything.</string>

    <string name="createDescription">Start a new habit to keep track of.</string>
    <string name="editDescription">Make changes to your existing habits.</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="comments">" comments"</string>
    <string name="message">Message</string>
    <string name="_11_hrs">11 hrs</string>
    <string name="_18">18</string>
    <string name="_5_comments">5 comments</string>
    <string name="like">Likes</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">\ Old Password</string>
    <string name="new_password">\ New Password</string>
    <string name="confirm">Confirm</string>
    <string name="sucessfully_updated">Successfully Updated</string>
    <string name="pw_does_not_match">Password does not match</string>
    <string name="wrong_pw">Wrong password</string>
    <string name="total_habits_tracked">Total Number of Habits Tracked</string>
    <string name="total_number_of_rewards">Total Number of Rewards</string>
    <string name="highest_streak_maintained">Highest Streak Maintained</string>
    <string name="create_a_habit">Create a habit</string>
    <string name="delete_a_habit">Delete a habit</string>
    <string name="edit_a_habit">Edit a habit</string>
    <string name="tap_on_the_create_button">Tap on the \'create\' button.</string>
    <string name="tap_on_the_habit_name">Tap on the habit name.</string>
    <string name="swipe_the_habit_away">Swipe the habit away.</string>

</resources>
