<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_username"/>
        <item android:id="@+id/nav_password"
            android:title="@string/change_password"
            android:icon="@drawable/ic_password"/>
        <item android:id="@+id/nav_user_manual"
            android:title="@string/user_manual"
            android:icon="@drawable/ic_book"/>
    </group>

    <item android:title="@string/space">
        <menu>
            <item android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit"/>
        </menu>
    </item>


</menu>