<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#a6dfda">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/trackable_habit"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_username"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:drawableStart="@drawable/ic_username"
        android:autofillHints="@string/username" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:drawableStart="@drawable/ic_password"
        android:autofillHints="@string/password" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:inputType="text|textPassword"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_password"
        android:autofillHints="@string/confirm_password"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>


</LinearLayout>


