<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorAccent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/change_password"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/change_old_pw"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:drawableStart="@drawable/ic_password"
        android:autofillHints="@string/old_password" />

    <EditText
        android:id="@+id/change_new_pw"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:drawableStart="@drawable/ic_password"
        android:autofillHints="@string/new_password" />


    <EditText
        android:id="@+id/change_confirm_new_pw"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:drawableStart="@drawable/ic_password"
        android:autofillHints="@string/confirm_password" />


    <Button
        android:id="@+id/change_confirm_pw"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/confirm"/>

</LinearLayout>